# KBUtilLib

./: .cookiecutter.json  .gitignore  .gitmodules  .pre-commit-config.yaml  DEPENDENCIES.md  Dockerfile  GETTING_STARTED.md  KBUtilLib  README.md  config.yaml  demo_optional_imports.py  dependencies.yaml  environment.yml  example_ai_curation_usage.py  example_assembly_usage.py  example_bvbrc_usage.py  example_environment_setup.py  example_plm_batch_query.py  example_skani_usage.py  example_stoichiometry_analysis.py  noxfile.py  pyproject.toml  test_dataframe_wrapping.ipynb  usage_examples.py  validate_thermo_backends.py
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: create-new-project.md  cursor-setup.md  envman-expert.md  jupyter-dev.md  kbdatalake-dashboard-dev.md  kbdatalakeapps-dev.md  kbu-start.md  kbutillib-dev.md  kbutillib-expert.md
.github/workflows/: constraints.txt  release.yml  tests.yml
agent-io/: verdict.json
agent-io/audits/: 2026-05-06-kbutillib-cross-module-audit.md  2026-06-13-kbu-vs-beril-directive-audit.md  2026-06-15-kbu-skills-friction.md
agent-io/docs/: AI_CURATION_BACKENDS.md  DEPENDENCIES.md  cli-reference.md  copilot_prompt_modular_utils.md  kbjobutils.md  kbu-king-cli.md  kbu-model-cli.md  kbutillib.md  notebook-migration-playbook.md
agent-io/plans/: 2026-07-11-ee2-narrative-provenance.md
agent-io/research/: reaction-similarity-findings.md
agent-io/skills/: kb-sdk-dev.md  kbase-genome-expert.md  kbu-start.md  kbu-workbench.md  kbutillib-dev.md  kbutillib-expert.md  msmodelutl-expert.md
agent-io/work-records/: buildplan-validate.md  cache-dir-param.md  dram2-id-remap-impl.md  dram2-id-remap-live-h100.md  dram2-module.md  ee2-piece-a-object-provenance.md  ee2-piece-b-narrative-audit.md  fix-check-jobs.md  fix-streaming-upload.md  fix-transyt-root-tmpdir-cleanup.md  gaa-ontomap-council.md  implement-find-flux-loops.md  kbase-genome-expert-and-utils.md  kbu-beril-deployer.md  kbu-beril-notebook-session-confirm.md  kbu-beril-skill-bundle.md  kbu-beril-worktree-cli-proxy.md  kbu-beril-worktree-library.md  kbu-build-skill.md  kbu-friction-reference-exemplar.md  kbu-friction-template-unify.md  kbu-friction-token-injection.md  kbu-harness-kbu-run-skill.md  kbu-plan-skill.md  kbu-producer.md  kbu-sub-build-subagent.md  kbu-sub-review-subagent.md  kbu-tmfa-p3p4p6-cli-polish.md  kbu-tmfa-p5-kbufba-doc.md  kbutillib-app-runner.md  kbutillib-expert-refresh.md  king-kbu-model-verbs.md  king-kbu-selfinstall.md  layout-profile.md  lp-solver-backends.md  lp-solver-job-store.md  m1-kbutillib-dram2utils.md  m1_kbutillib_parquet_translation.md  notebook-init.md  p1-doctor-origin-line.md  (+27 more)
data/: AICurationCacheCompoundAliases_ChEBI.json  AICurationCacheGeneAssociation.json  AICurationCacheReactionDirectionality.json  AICurationCacheReactionEquivalence.json  AICurationCacheReactionStoichiometry.json  model_reaction_review.json
docker/prokka/: Dockerfile
docker/transyt/: Dockerfile
docs/: MIGRATION_GUIDE.md  code_of_conduct.md  conf.py  contributing.md  index.md  patric_workspace.md  quick-reference.md  reference.md  requirements.txt  usage.md
docs/modules/: argo_utils.md  base_utils.md  index.md  kb_annotation_utils.md  kb_berdl_utils.md  kb_callback_utils.md  kb_genome_utils.md  kb_model_utils.md  kb_sdk_utils.md  kb_ws_utils.md  ms_biochem_utils.md  ms_reaction_similarity_utils.md  notebook_utils.md  shared_env_utils.md
docs/thermo-cheminformatics/: INSTALL.md  README.md
examples/: enhanced_dataframe_display.ipynb  kb_report_utils_example.py  plm_utils_example.py  uniprot_utils_example.py
examples/kbu_notebook_reference/: README.md
machine_configs/: _default.yaml  h100.yaml  popjup.yaml
notebooks/: AICuration.ipynb  AssemblyUploadDownload.ipynb  BERDLDataAPI.ipynb  BVBRCGenomeConversion.ipynb  ConfigureEnvironment.ipynb  KBaseWorkspaceUtilities.ipynb  MMSeqsClustering.ipynb  ProteinLanguageModels.ipynb  README.md  RegisterGenomeDataLakeTables.ipynb  SKANIGenomeDistance.ipynb  StoichiometryAnalysis.ipynb  module_registration_testing.ipynb  util.py
notebooks/data/: KBaseFBA.spec  KBaseGenomes.spec
notebooks/datacache/: BRBRC-genome.json  KBaseFBARegistration.json  KBaseFBARelease.json  KBaseGenomesRegistration.json  KBaseGenomesRelease.json
scripts/: validate_equilibrator_live.sh
src/kbutillib/: __init__.py  __main__.py  ai_curation_utils.py  annotator_utils.py  argo_utils.py  base_utils.py  bvbrc_utils.py  cobra_to_kbase_utils.py  compartments.py  dependency_manager.py  dram2_utils.py  escher_utils.py  examples.py  kb_annotation_utils.py  kb_berdl_utils.py  kb_callback_utils.py  kb_genome_utils.py  kb_model_standardization_utils.py  kb_model_utils.py  kb_model_utils.py.bak  kb_narrative_audit.py  kb_plm_utils.py  kb_reads_utils.py  kb_report_utils.py  kb_sdk_utils.py  kb_skani_utils.py  kb_transyt_utils.py  kb_uniprot_utils.py  kb_ws_utils.py  kbase_catalog_client.py  kbase_endpoints.py  kbase_report.js  king_install.py  layout.py  mmseqs_utils.py  model_directionality.py  model_helpers.py  (+19 more)
tests/: README.md  __init__.py  conftest.py  test_adopt_inventory.py  test_beril_deployer.py  test_beril_skill_bundle.py  test_check_jobs_list_vs_dict.py  test_composition_smoke.py  test_comprehensive_gapfill_wrapper.py  test_escher_utils.py  test_find_flux_loops.py  test_kb_annotation_utils_parquet.py  test_kb_auth_token_injection.py  test_kb_berdl_utils.py  test_kb_genome_utils_save.py  test_kb_job_utils.py  test_kb_model_utils.py  test_kb_narrative_provenance.py  test_kb_plm_utils.py  test_kb_ws_utils.py  test_kbase_endpoints.py  test_layout.py  test_local_construct_no_token.py  test_lp_solver_job_store.py  test_lp_solver_solver_backends.py  test_mmseqs_utils.py  test_ms_biochem_deltag.py  test_ms_fba_utils_eval.py  test_ms_reaction_similarity.py  test_ms_reconstruction_utils.py  test_ms_template_utils.py  test_network_expansion.py  test_ontomap_utils.py  test_predictive_thermo.py  test_task_a_venv_doctor.py  test_upload_blob_file_streaming.py  test_verab.py  test_verab_cli.py  test_verab_king.py  test_verab_king_bundle.py  (+2 more)
(+375 files in other folders)
