[project]
name = "KBUtilLib"
version = "0.0.0"
description = "KBUtilLib"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Christopher Henry", email = "chenry@anl.gov"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
]

dependencies = [
"click >=8.0.1",
"nox",
"PyYAML >=6.0",
"requests >=2.25.0",

]


[project.urls]
Homepage = "https://github.com/cshenry/KBUtilLib"
Repository = "https://github.com/cshenry/KBUtilLib"
Documentation = "https://KBUtilLib.readthedocs.io"
Changelog = "https://github.com/cshenry/KBUtilLib/releases"

[dependency-groups]
dev = [
  "coverage[toml] >= 6.2",
  "pre-commit >=2.16.0",
  "pre-commit-hooks >=4.6.0",
  "pytest >=6.2.5",
  "pygments >=2.10.0",

]
lint = [
  "ruff >=0.5.5",
  "pydoclint >=0.5.0",
]
docs = [
  "furo >=2021.11.12",
  "myst-parser == 3.0.1",
  "sphinx >= 4.3.2",
  "sphinx-autobuild >=2021.3.14",
  "sphinx-click >=3.0.2",
]
mypy = [
  "mypy >=0.930"
]
typeguard = [
  "typeguard >=2.13.3"
]
xdoctest = [
  "xdoctest[colors] >=0.15.10"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[project.scripts]
KBUtilLib = "kbutillib.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["kbutillib", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "W",    # pycodestyle warnings
]
ignore = [
  "E501",  # line too long (let ruff-format handle this)
  "E711",  # comparison to None should use is/is not
  "E722",  # do not use bare except
  "F821",  # undefined name (common in generated/client code)
  "F841",  # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"noxfile.py" = ["S101"]
"**/conftest.py" = ["S101"]
